# fava-forecast

./: .gitignore  README.md  pyproject.toml
src/fava_forecast/: __init__.py  beancount_io.py  budgets.py  cli.py  config.py  convert.py  dateutils.py  errors.py  fava_ext.py  forecast.py  formatters.py  rates.py
src/fava_forecast/templates/: budget-forecast.html
tests/: conftest.py  test_beancount_io.py  test_budgets.py  test_cli.py  test_config.py  test_convert.py  test_dateutils.py  test_errors.py  test_fava_ext.py  test_forecast.py  test_formatters.py  test_rates.py
