[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fava-forecast"
version = "0.3.0"
requires-python = ">=3.9"
dependencies = [
    "beancount>=3.2.0",
    "beanquery>=0.2.0",
]

[project.optional-dependencies]
fava = ["fava>=1.30"]
dev = ["fava>=1.30","pytest>=7.4.4", "flask>=3.1.2"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
fava_forecast = ["templates/*.html", "templates/**/*.html"]

[tool.setuptools.packages.find]
where = ["src"]

